syntax = "proto3";
package req;

message IdRequest {
    string id = 1;
}